# plink-ng

./: .#gen_test.c  .#gen_testOld.c  .gitattributes  .gitignore  .gitmodules  Makefile  Makefile-nl  Makefile.std  Makefile_ec2  README.md  Rconnection.c  Rconnection.cc  Rconnection.h  SFMT-common.h  SFMT.c  SFMT.h  bgen_to_gen.c  bgzf.c  config.h  dbl2txt.c  dcdflib.c  dcdflib.h  dose2plink.c  fisher.c  fisher2.c  genPhen.c  genPhenHoled  genPhenHoled.c  genPhenHoledMapped  genPhenHoledMapped.c  gen_test.c  hfile.c  interval_merge.c  nsort.c  pigz.c  pigz.h  pigz_test.c  plink.c  plink_assoc.c  plink_assoc.h  (+82 more)
1.9/: .gitignore  BUILD  Makefile  Makefile.generic  Makefile.old  Makefile.src  Makefile.std  README.md  Rconnection.cc  Rconnection.h  Rsrv.h  SFMT.c  SFMT.h  bgen_to_gen.c  bgzf.c  bgzf.h  dbl2txt.c  dcdflib.c  dcdflib.h  dose2plink.c  hfile.c  hfile.h  hfile_internal.h  interval_merge.c  ipmpar.h  khash.h  nsort.c  pigz.c  pigz.h  plink.c  plink_assoc.c  plink_assoc.h  plink_calc.c  plink_calc.h  plink_cluster.c  plink_cluster.h  plink_cnv.c  plink_cnv.h  plink_common.c  plink_common.h  (+35 more)
2.0/: .gitignore  Makefile  Makefile.src  (+126 more)
2.0/Python/: .gitignore  MANIFEST.in  README.md  ReadMe.md  dev-requirements.txt  extract_haps.py  hamming_distance.py  het_count.py  pgen_subset_and_compress.py  pgenlib.pyx  pyproject.toml  python_api.txt  setup.py  single_variant_test.py
2.0/Python/src/: .gitignore
2.0/Python/src/pgenlib/: pgenlib.pyx
2.0/Python/src/plink2/: pvar_ffi_support.cc
2.0/Python/src/plink2/include/: check.h  hedley.h  pgenlib_ffi_support.cc  pgenlib_ffi_support.h  pgenlib_misc.cc  pgenlib_misc.h  pgenlib_read.cc  pgenlib_read.h  pgenlib_write.cc  pgenlib_write.h  plink2_base.cc  plink2_base.h  plink2_bgzf.cc  plink2_bgzf.h  plink2_bits.cc  plink2_bits.h  plink2_float.cc  plink2_float.h  plink2_htable.cc  plink2_htable.h  plink2_memory.cc  plink2_memory.h  plink2_simd.cc  plink2_simd.h  plink2_string.cc  plink2_string.h  plink2_text.cc  plink2_text.h  plink2_thread.cc  plink2_thread.h  plink2_zstfile.cc  plink2_zstfile.h  pvar_ffi_support.cc  pvar_ffi_support.h  simde-arch.h  simde-detect-clang.h  x86
2.0/Python/src/plink2/libdeflate/: common_defs.h  libdeflate.h
2.0/Python/src/plink2/libdeflate/lib/: adler32.c  adler32_vec_template.h  bt_matchfinder.h  cpu_features_common.h  crc32.c  crc32_multipliers.h  crc32_table.h  crc32_tables.h  crc32_vec_template.h  decompress_template.h  deflate_compress.c  deflate_compress.h  deflate_constants.h  deflate_decompress.c  gzip_compress.c  gzip_constants.h  gzip_decompress.c  hc_matchfinder.h  ht_matchfinder.h  lib_common.h  matchfinder_common.h  unaligned.h  utils.c  zlib_compress.c  zlib_constants.h  zlib_decompress.c
2.0/Python/src/plink2/libdeflate/lib/arm/: adler32_impl.h  arm_cpu_features.c  cpu_features.h  crc32_impl.h  crc32_pmull_helpers.h  crc32_pmull_wide.h  matchfinder_impl.h
2.0/Python/src/plink2/libdeflate/lib/x86/: adler32_impl.h  adler32_template.h  cpu_features.h  crc32_impl.h  crc32_pclmul_template.h  decompress_impl.h  matchfinder_impl.h  x86_cpu_features.c
2.0/Python/src/plink2/simde/: debug-trap.h  simde-aes.h  simde-align.h  simde-bf16.h  simde-common.h  simde-complex.h  simde-constify.h  simde-diagnostic.h  simde-f16.h  simde-features.h  simde-math.h
2.0/Python/src/plink2/zstd/lib/: zdict.h  zstd.h  zstd_errors.h
2.0/Python/src/plink2/zstd/lib/common/: allocations.h  bits.h  bitstream.h  compiler.h  cpu.h  debug.c  debug.h  entropy_common.c  error_private.c  error_private.h  fse.h  fse_decompress.c  huf.h  mem.h  pool.c  pool.h  portability_macros.h  threading.c  threading.h  xxhash.c  xxhash.h  zstd_common.c  zstd_deps.h  zstd_internal.h  zstd_trace.h
2.0/Python/src/plink2/zstd/lib/compress/: clevels.h  fse_compress.c  hist.c  hist.h  huf_compress.c  zstd_compress.c  zstd_compress_internal.h  zstd_compress_literals.c  zstd_compress_literals.h  zstd_compress_sequences.c  zstd_compress_sequences.h  zstd_compress_superblock.c  zstd_compress_superblock.h  zstd_cwksp.h  zstd_double_fast.c  zstd_double_fast.h  zstd_fast.c  zstd_fast.h  zstd_lazy.c  zstd_lazy.h  zstd_ldm.c  zstd_ldm.h  zstd_ldm_geartab.h  zstd_opt.c  zstd_opt.h  zstd_preSplit.c  zstd_preSplit.h  zstdmt_compress.c  zstdmt_compress.h
2.0/Python/src/plink2/zstd/lib/decompress/: huf_decompress.c  zstd_ddict.c  zstd_ddict.h  zstd_decompress.c  zstd_decompress_block.c  zstd_decompress_block.h  zstd_decompress_internal.h
2.0/Python/tests/: test_multithread.py  test_pgenlib.py
2.0/pgenlibr/: .Rbuildignore  DESCRIPTION  LICENSE.note  NAMESPACE  NEWS.md  README.md  cleanup  configure  configure.ac
2.0/pgenlibr/R/: RcppExports.R
2.0/pgenlibr/inst/extdata/: chr21_phase3_start.pgen  chr21_phase3_start.pvar.zst
2.0/pgenlibr/inst/include/: libdeflate  pgenlib_ffi_support.cpp  pgenlib_ffi_support.h  pvar_ffi_support.h  simde
2.0/pgenlibr/man/: AlleleCodeBuf.Rd  BoolBuf.Rd  Buf.Rd  ClosePgen.Rd  ClosePvar.Rd  GetAlleleCode.Rd  GetAlleleCt.Rd  GetMaxAlleleCt.Rd  GetRawSampleCt.Rd  GetVariantChrom.Rd  GetVariantCt.Rd  GetVariantId.Rd  GetVariantPos.Rd  GetVariantsById.Rd  HardcallPhasePresent.Rd  HasSparse.Rd  HasSparseHardcalls.Rd  IntAlleleCodeBuf.Rd  IntBuf.Rd  NewPgen.Rd  NewPvar.Rd  Read.Rd  ReadAlleles.Rd  ReadHardcalls.Rd  ReadIntList.Rd  ReadList.Rd  ReadSparse.Rd  ReadSparseHardcalls.Rd  VariantScores.Rd  pgenlibr-package.Rd
2.0/pgenlibr/src/: Makevars  Makevars.in  Makevars.win  RcppExports.cpp  install.libs.R  libdeflate  pgenlib_ffi_support.cpp  pgenlib_ffi_support.h  pgenlib_internal.cpp  pgenlib_internal.h  pgenlib_misc.cpp  pgenlib_misc.h  pgenlib_read.cpp  pgenlib_read.h  pgenlibr.cpp  plink2_base.cpp  plink2_base.h  plink2_bgzf.cpp  plink2_bgzf.h  plink2_getline.cpp  plink2_getline.h  plink2_string.cpp  plink2_string.h  plink2_text.cpp  plink2_text.h  plink2_thread.cpp  plink2_thread.h  plink2_zstfile.cpp  plink2_zstfile.h  pvar.cpp  pvar.h  pvar_ffi_support.cpp  pvar_ffi_support.h  simde  zstd
2.0/pgenlibr/tools/: libdeflate_version.cpp  simde_version.cpp  zstd_version.cpp
2.0/pgenlibr/tools/include/: zstd
(+202 files in other folders)
