[build-system]
requires = [
    "wheel",
    # pin setuptools on pypy to workaround this bug: https://github.com/pypa/distutils/issues/283 https://github.com/pypa/cibuildwheel/issues/1983
    "setuptools < 72.2; platform_python_implementation == 'PyPy'",
    "setuptools ; platform_python_implementation != 'PyPy'",
    "Cython>=3.1.0",
    "numpy>=2.0.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "Pgenlib"
version = "0.93.0"
description = "Python wrapper for pgenlib's basic reader and writer."
authors = [
    {name = "Christopher Chang", email = "chrchang@alumni.caltech.edu"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.19.3",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/chrchang/plink-ng"
"Bug Tracker" = "https://github.com/chrchang/plink-ng/issues"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]
